build: java from 11 to 17 (#126)
* build: java 11 to 17 :coffee:

* ci: java 17 in workflows

* fix: erroneous command line argument after java 17

* ci: update docker image after java 17

* fix: use docker image with tomcat 9